--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nobak-design-system",
   "description": "design system for Nobak",
-  "version": "0.0.1",
+  "version": "0.0.1-4edea098dbcf",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "clean": "rm -rf lib",
     "webpack": "webpack --mode production",
     "storybook": "sb dev dev -p 6006",
+    "pull-request": "node ./scripts/pull-request.cjs",
+    "publish-package": "npm publish --registry http://localhost:4873",
     "build-storybook": "cross-env NODE_ENV=production sb build",
     "tailwind:dev": "cross-env NODE_ENV=development tailwindcss build -i styles/main.css -o styles/index.css -c tailwind.config.js",
     "tailwind:build": "cross-env NODE_ENV=production tailwindcss build -i styles/main.css -o styles/index.css -c tailwind.config.js",
@@ -136,5 +138,6 @@
   "homepage": "https://github.com/Nobak/nobak-design-system",
   "volta": {
     "node": "18.18.2"
-  }
+  },
+  "packageManager": "pnpm@8.9.2+sha1.5f2fa48d614263457cf5d7fb7be8b878da318d87"
 }
